[FIX]changed dependencies and dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,35 +1,21 @@
-# Venv & IDE
-.venv/
-.env
-*.code-workspace
-.vscode/
-.idea/
-
-# Versionskontrolle & CI
-.git
-.gitignore
-.github/
-
-# Tests & Artefakte
-tests/
-dist/
-build/
+# Python build/cache
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
-*.egg-info/
 
-# OS-Kleinkram
-.DS_Store
-Thumbs.db
+# Lokale Datenbanken & persistente Files
+*.db
+data/
+
+# Umgebungen & lokale Tools
+.env
+.venv
+
+# Git & Docker Meta
+.git
+.gitignore
+.dockerignore
 
 # Logs
 *.log
-
-# Node/Front (falls mal dazukommt)
-node_modules/
-Dockerfile
-
-# Wir WOLLEN app/data mitkopieren, damit Default-Dateien im Image sind.
-# Persistenz passiert über den Bind-Mount beim Run (siehe oben).
