[FIX]fixed last roll not 5 rolls possible

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ dist/
 /app/leaderboard_recent.json
 /app/stats.json
 /data/
+data/leaderboard_alltime.json
+data/leaderboard_recent.json
+data/stats.json
